now the website will send the data to esp32. Website will send data to firebase. Esp32 will fetch the data from firebase. It will take some minutes to reflect the changes

--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ESP32 Data Display</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Send Message to Firebase</title>
 </head>
 <body>
-    <div class="container">
-        <div id="display-box">Data from ESP32 will appear here</div>
-        <input type="text" id="input-box" placeholder="Write something here...">
-        <button id="send-button">Send</button>
-    </div>
+    <h2>Send Message to Firebase</h2>
+    <input type="text" id="input-box" placeholder="Type your message here">
+    <button id="send-button">Send</button>
+
     <script src="script.js"></script>
 </body>
 </html>
