send data from sd card to firebase to website. no authtication

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Send Message to Firebase</title>
+    <title>ESP32 Data Display</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>Send Message to Firebase</h2>
-    <input type="text" id="input-box" placeholder="Type your message here">
-    <button id="send-button">Send</button>
+    <div class="container">
+        <h2>File 1 Content:</h2>
+        <div id="file1-display">Loading...</div>
 
+        <h2>File 2 Content:</h2>
+        <div id="file2-display">Loading...</div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
