send data from website to firebase to sd card. with authentication

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h2>File 1 Content:</h2>
-        <div id="file1-display">Loading...</div>
-
         <h2>File 2 Content:</h2>
-        <div id="file2-display">Loading...</div>
+        <!-- Make the textarea larger to edit content -->
+        <textarea id="file2-input"></textarea>
+        <button onclick="saveFile2()">Save</button>
     </div>
     <script src="script.js"></script>
 </body>
